--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "Clases.js,server.js",
+    "start": "node server",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev":"nodemon --ignore feedback.json server.js"
   },
